--- a/tester.ipynb
+++ b/tester.ipynb
@@ -31,6 +31,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<User susan>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from app.models import User\n",
+    "\n",
+    "u = User(username = 'susan',email = 'susan@example.com')\n",
+    "u"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
